Redo the workings of the table with the recipients to fix a problem where it was sized too big on firefox.

--- a/dumbhippo/trunk/server/web/css/sharelink.css
+++ b/dumbhippo/trunk/server/web/css/sharelink.css
@@ -105,6 +105,8 @@ table, tr, td {
 }
 
 #dhShareRecipientsContainer {
+  table-layout: fixed;
+  width: 100%;
   height: 24px;
   padding: 0px;
   border: 0px;
@@ -127,10 +129,11 @@ table, tr, td {
 
 #dhShareRecipientComboBox {
   border: none;
+  width: 100%;
   height: 24px;
   background: #b9dcff;
   padding: 0px;
-  margin: 0px 2px;
+  margin: 0px;
 }
 
 #dhShareDownArrow {
@@ -139,15 +142,19 @@ table, tr, td {
   text-align: center;
   background: #b9dcff;
   border: none;
-  margin: 0px 2px;
-  padding: 0px 2px;
+  margin: 0px;
+  padding: 0px;
+}
+
+#dhShareAddCell {
+  width: 63px;
 }
 
 #dhShareAddButton {
   height: 24px;
   border: none;
   padding: 0px;
-  margin: 0px 2px;
+  margin: 0px 0px;
 }
 
 #dhShareRecipientsBox {
